@@ -4516,12 +4516,15 @@ void ptk_file_browser_open_selected_files_with_app( PtkFileBrowser* file_browser
 {
     GList * sel_files;
     sel_files = ptk_file_browser_get_selected_files( file_browser );
+    char* path = NULL;
 
     // archive?
     if( sel_files && !xset_get_b( "arc_def_open" ) )
     {
         VFSFileInfo* file = vfs_file_info_ref( (VFSFileInfo*)sel_files->data );
         VFSMimeType* mime_type = vfs_file_info_get_mime_type( file );
+        path = g_build_filename( ptk_file_browser_get_cwd( file_browser ),
+                                            vfs_file_info_get_name( file ), NULL );
         vfs_file_info_unref( file );    
         if ( ptk_file_archiver_is_format_supported( mime_type, TRUE ) )
         {
@@ -4542,13 +4545,17 @@ int no_write_access = 0;
                 goto _done;
             }
             else if ( xset_get_b( "arc_def_exto" ) || 
-                        ( xset_get_b( "arc_def_ex" ) && no_write_access ) )
+                        ( xset_get_b( "arc_def_ex" ) && no_write_access &&
+                                            !( g_str_has_suffix( path, ".gz" ) && 
+                                            !g_str_has_suffix( path, ".tar.gz" ) ) ) )
             {
                 ptk_file_archiver_extract( file_browser, sel_files, 
                                 ptk_file_browser_get_cwd( file_browser ), NULL );
                 goto _done;
             }
-            else if ( xset_get_b( "arc_def_list" ) )
+            else if ( xset_get_b( "arc_def_list" ) &&  
+                            !( g_str_has_suffix( path, ".gz" ) && 
+                                            !g_str_has_suffix( path, ".tar.gz" ) ) )
             {
                 ptk_file_archiver_extract( file_browser, sel_files,
                             ptk_file_browser_get_cwd( file_browser ), "////LIST" );
@@ -4583,6 +4590,7 @@ int no_write_access = 0;
     ptk_open_files_with_app( ptk_file_browser_get_cwd( file_browser ),
                          sel_files, app_desktop, file_browser, FALSE, FALSE );
 _done:
+    g_free( path );
     vfs_file_info_list_free( sel_files );
 }
 
