@@ -3120,10 +3120,10 @@ char* vfs_volume_device_mount_cmd( const char* device_file, const char* options 
         {
             // udevil
             if ( options && options[0] != '\0' )
-                command = g_strdup_printf( "%s --verbose mount %s -o '%s'",
+                command = g_strdup_printf( "%s mount %s -o '%s'",
                                             s1, device_file, options );
             else
-                command = g_strdup_printf( "%s --verbose mount %s",
+                command = g_strdup_printf( "%s mount %s",
                                             s1, device_file );
         }
         else if ( s1 = g_find_program_in_path( "pmount" ) )
@@ -3174,7 +3174,7 @@ char* vfs_volume_device_unmount_cmd( const char* device_file )
         if ( s1 = g_find_program_in_path( "udevil" ) )
         {
             // udevil
-            command = g_strdup_printf( "%s --verbose umount '%s'", s1, device_file );
+            command = g_strdup_printf( "%s umount '%s'", s1, device_file );
         }
         else if ( s1 = g_find_program_in_path( "pumount" ) )
         {
