@@ -7,6 +7,7 @@
     added user manual MIME Menu section
     accept network urls
     mount iso files from Open context menu; auto-mount iso
+    added Root|Edit udevil.conf to devices menu
 0.7.7   2012-05-27:
     escape mount point in dev props scripts fixes #70
     fixed File|File Search keybinding
